<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_padding"
    tools:context=".Lesson2_3Activity">

    <EditText
        android:id="@+id/et_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_default_les_2_3"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/et_uri" />

    <Button
        android:id="@+id/btn_open_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_default_les_2_3"
        android:text="@string/btn_uri" />

    <EditText
        android:id="@+id/et_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_default_les_2_3"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/et_loc" />

    <Button
        android:id="@+id/btn_open_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_default_les_2_3"
        android:text="@string/btn_loc" />

    <EditText
        android:id="@+id/et_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_default_les_2_3"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/et_share" />

    <Button
        android:id="@+id/btn_share_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_default_les_2_3"
        android:text="@string/btn_share" />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_default_les_2_3"
        android:text="@string/btn_camera_text" />
</LinearLayout>