<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_hello_text"
        android:textSize="@dimen/tv_hello_text_size"
        app:layout_constraintBottom_toTopOf="@+id/et_message_for_reply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_message_for_reply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/et_message_for_send_margin_start"
        android:layout_marginEnd="@dimen/et_message_for_send_margin_left"
        android:layout_marginBottom="@dimen/et_message_for_send_margin_bottom"
        android:ems="10"
        android:hint="@string/et_message_for_send_hint"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_reply_message"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_reply_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/btn_send_message_margin_end"
        android:layout_marginBottom="@dimen/btn_send_message_margin_bottom"
        android:text="@string/btn_reply_message_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_tv_count_sec_act"
        android:text="@string/tv_count_sec_act_default_text"
        android:textSize="@dimen/text_size_tv_count_sec_act"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hello" />
</androidx.constraintlayout.widget.ConstraintLayout>