<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="@dimen/default_padding"
    tools:context=".Lesson1_2_B_Activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons_layout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_toast"
            style="@style/btn_default_style"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/btn_toast_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_zero"
            style="@style/btn_default_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="2"
            android:gravity="center|center_horizontal"
            android:text="@string/btn_zero_text"
            app:layout_constraintStart_toStartOf="@+id/btn_toast"
            app:layout_constraintTop_toBottomOf="@+id/btn_toast" />

        <Button
            android:id="@+id/btn_count"
            style="@style/btn_default_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/btn_count_text"
            app:layout_constraintStart_toStartOf="@+id/btn_zero"
            app:layout_constraintTop_toBottomOf="@+id/btn_zero" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/frame_layout_counter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/frame_layout_counter_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttons_layout"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/count_initial_value"
            android:textColor="@color/btn_and_tv_main_color"
            android:textSize="@dimen/tv_count"
            android:textStyle="bold" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>