<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    tools:context=".Lesson2_1Activity">

    <Button
        android:id="@+id/btn_say_hello"
        style="@style/btn_default_style"
        android:gravity="center"
        android:text="@string/btn_say_hello_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frame_layout_counter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:background="@color/frame_layout_counter_background"
        app:layout_constraintBottom_toTopOf="@+id/btn_count"
        app:layout_constraintEnd_toEndOf="@+id/btn_say_hello"
        app:layout_constraintStart_toStartOf="@+id/btn_say_hello"
        app:layout_constraintTop_toBottomOf="@+id/btn_say_hello">

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/count_initial_value"
            android:textColor="@color/btn_and_tv_main_color"
            android:textSize="@dimen/tv_count"
            android:textStyle="bold" />
    </FrameLayout>

    <Button
        android:id="@+id/btn_count"
        style="@style/btn_default_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btn_count_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>